--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "orion",
   "version": "0.6.1",
+  "type": "module",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -13,6 +14,11 @@
   },
   "homepage": "https://gavinmorrow.github.io/orion",
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^9.34.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2"
   },
